update(): fix css for overflow (wrong file); make title sticky

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -39,16 +39,11 @@
   width: 50%;
 }
 
-.controlColumn > div {
-  white-space: nowrap;
-  overflow-x: auto;
-}
-
 .perspectiveEffect {
   position: fixed;
   top: 60%;
   left: 0;
-  height: 40%;
+  bottom: 0;
   width: 100%;
   background-color: hsl(195deg, 20%, 86%);
 }
